--- a/chat.html
+++ b/chat.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div id="context-options" class="d-flex flex-column align-items-end me-3 mb-3">
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="contextOption" id="contextNo" value="no" checked>
+            <label class="form-check-label" for="contextNo">
+                No Context
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="contextOption" id="contextYes" value="yes">
+            <label class="form-check-label" for="contextYes">
+                Add Context
+            </label>
+        </div>
+        <textarea class="form-control mt-2 d-none" id="context-input" rows="3" placeholder="Enter context here..."></textarea>
+    </div>
     
     <div class="chat-container">
         <div class="chat-box" id="chat-box">
@@ -508,58 +523,119 @@ label[for=nav-footer-toggle] {
   border-radius: 99px;
   background-color: #D62929;
 }
+#context-options {
+    position: absolute;
+    top: 300px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.d-none {
+    display: none;
+}
+
+.d-block {
+    display: block;
+}
+
 
     </style>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            const sendButton = document.getElementById("send-button");
-            const chatInput = document.getElementById("chat-input");
-            const chatBox = document.getElementById("chat-box");
+    const sendButton = document.getElementById("send-button");
+    const chatInput = document.getElementById("chat-input");
+    const chatBox = document.getElementById("chat-box");
 
-            sendButton.addEventListener("click", function() {
-                sendMessage();
-            });
+    sendButton.addEventListener("click", function() {
+        sendMessage();
+    });
 
-            chatInput.addEventListener("keypress", function(e) {
-                if (e.key === "Enter") {
-                    sendMessage();
-                }
-            });
+    chatInput.addEventListener("keypress", function(e) {
+        if (e.key === "Enter") {
+            sendMessage();
+        }
+    });
 
-            function sendMessage() {
-                const message = chatInput.value.trim();
-                if (message !== "") {
-                    // Append user's message
-                    appendMessage(message, "user");
-
-                    // Clear input field
-                    chatInput.value = "";
-
-                    // Simulate response from ChatGPT
-                    setTimeout(function() {
-                        const response = "hello";
-                        appendMessage(response, "chatgpt");
-                    }, 1000); // Simulate a delay for the response
-                }
+    function sendMessage() {
+        let message = chatInput.value.trim();
+        if (message !== "") {
+            const contextInput = document.getElementById("context-input");
+            if (contextInput.classList.contains("d-block") && contextInput.value.trim() !== "") {
+                message += "\nالسياق: " + contextInput.value.trim();
+                contextInput.value = "";
             }
 
-            function appendMessage(message, sender) {
-                const messageElement = document.createElement("div");
-                messageElement.classList.add("chat-message");
-                if (sender === "user") {
-                    messageElement.classList.add("user");
-                }
+            // Append user's message
+            appendMessage(message, "user");
 
-                const messageText = document.createElement("p");
-                messageText.textContent = message;
+            // Clear input field
+            chatInput.value = "";
 
-                messageElement.appendChild(messageText);
-                chatBox.appendChild(messageElement);
+            // Simulate response from ChatGPT
+            setTimeout(function() {
+                const response = generateResponse(message);
+                appendMessage(response, "chatgpt");
+            }, 1000); // Simulate a delay for the response
+        }
+    }
+            document.getElementById("send-button").addEventListener("click", function() {
+    const chatInput = document.getElementById("chat-input").value;
+    const chatBox = document.getElementById("chat-box");
+    const userMessage = document.createElement("div");
+    userMessage.classList.add("chat-message", "user");
+    userMessage.innerHTML = `<p>${chatInput}</p>`;
+    chatBox.appendChild(userMessage);
+    document.getElementById("chat-input").value = "";
 
-                // Scroll to the bottom of the chat box
-                chatBox.scrollTop = chatBox.scrollHeight;
+    const contextInput = document.getElementById("context-input");
+    if (contextInput.classList.contains("d-block")) {
+        const contextMessage = document.createElement("div");
+        contextMessage.classList.add("chat-message");
+        contextMessage.innerHTML = `<p>Context: ${contextInput.value}</p>`;
+        chatBox.appendChild(contextMessage);
+        contextInput.value = "";
+    }
+});
+
+document.querySelectorAll('input[name="contextOption"]').forEach((elem) => {
+        elem.addEventListener("change", function(event) {
+            const contextInput = document.getElementById("context-input");
+            if (event.target.value === "yes") {
+                contextInput.classList.remove("d-none");
+                contextInput.classList.add("d-block");
+            } else {
+                contextInput.classList.remove("d-block");
+                contextInput.classList.add("d-none");
             }
+    });
+});
+function generateResponse(message) {
+        // Placeholder for generating a response based on the message and context
+        // Replace this with actual logic to generate a response from the model
+        return "هذه هي الإجابة بناءً على السؤال والسياق المقدم.";
+    }
+
+
+
+function appendMessage(message, sender) {
+        const messageElement = document.createElement("div");
+        messageElement.classList.add("chat-message");
+        if (sender === "user") {
+            messageElement.classList.add("user");
+        }
+
+        const messageText = document.createElement("p");
+        messageText.textContent = message;
+
+        messageElement.appendChild(messageText);
+        chatBox.appendChild(messageElement);
+
+        // Scroll to the bottom of the chat box
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
         });
     </script>
 </html>
